about student detail commit

--- a/templates/htmlpages/About.html
+++ b/templates/htmlpages/About.html
@@ -51,9 +51,9 @@
                required at a single place . We would be contented if you can value our efforts .
             </p>
             <ul class="links">
-                <li><a href=""><text>TUSHAR</text> : DEVELOPER OF THE FRONTEND , BACKEND AND THE DATABASE SYSTEM .</a></li>
+                <li><a href=""><text>TUSHAR </text><student>[ sophomore Dept Comp & Comm ]</student>: DEVELOPER OF THE FRONTEND , BACKEND AND THE DATABASE SYSTEM .</a></li>
                 <div class="vertical-line"></div>
-                <li><a href="https://www.instagram.com/ranjith._.bk/"><text>RANJITH</text> : CREDITS FOR THE STUDY MATERIALS AND PDF'S.</a></li>
+                <li><a href="https://www.instagram.com/ranjith._.bk/"><text>RANJITH </text><student>[ sophomore Dept Comp & Comm ]</student>: CREDITS FOR THE STUDY MATERIALS AND PDF'S.</a></li>
                 
             </ul>
             <ul class="icons ">
