--- a/templates/htmlpages/home.html
+++ b/templates/htmlpages/home.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../styling/home.css">
     <link rel="stylesheet" href="../styling/beffects.css">
     <title>CCE HOME PAGE</title>
-    <link rel="icon" href="../statics/Screenshot 2021-12-31 233719-modified.png" type="image/png">
+    <link rel="icon" href="../statics/cce-favicon.png" type="image/png">
 
 
 </head>
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark shadow-lg bg-gradient" >
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-                <img src="../statics/Screenshot 2021-12-31 233719-modified.png" alt="access logo" width="40" height="40">
+                <img src="../statics/access-logo.png" alt="access logo" width="80" height="40">
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
