--- a/templates/htmlpages/home.html
+++ b/templates/htmlpages/home.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <!-- //background styling -->
+    <!-- //background stylings -->
     <div class="bg"></div>
 
     <div class="star-field">
