--- a/templates/htmlpages/home.html
+++ b/templates/htmlpages/home.html
@@ -112,7 +112,7 @@
                         <p class="card-text text-white">5th SEM STUDY MATERIALS.</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/5thsem">
+                                <a href="/5thsemnotes">
                                     <button type="submit" class="btn btn-lg btn-primary" id="home_buttons">OPEN</button>
                                 </a>
                             </div>
