--- a/templates/htmlpages/About.html
+++ b/templates/htmlpages/About.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>About Us card || Learning robo</title>
+    <title>About Us card</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ABOUT PAGE</title>
-    <link rel="icon" href="../statics/Screenshot 2021-12-31 233719-modified.png" type="image/png">
+    <link rel="icon" href="../statics/cce-favicon.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="../styling/aboutstyling.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark shadow-lg bg-gradient" >
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="../statics/Screenshot 2021-12-31 233719-modified.png" alt="" width="40" height="40">
+                <img src="../statics/access-logo.png" alt="" height="40">
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -43,7 +43,7 @@
         </div>
 
         <div class="content ">
-            <h2 ">About Us</h2>
+            <h2 >About Us</h2>
             
             <p>This website frontend was developed using HTML ,CSS and Javascript . The backend of the system was built using Nodejs 
                and Express . The current backend is supported by MongoDb. A lot of effort and hardwork was put behind this project . 
@@ -51,9 +51,9 @@
                required at a single place . We would be contented if you can value our efforts .
             </p>
             <ul class="links">
-                <li><a href=""><text>TUSHAR </text><student>[ sophomore Dept Comp & Comm ]</student>: DEVELOPER OF THE FRONTEND , BACKEND AND THE DATABASE SYSTEM .</a></li>
+                <li><a href=""><text>TUSHAR </text><student>[ senior Dept Comp & Comm ]</student>: DEVELOPER OF THE FRONTEND , BACKEND AND THE DATABASE SYSTEM .</a></li>
                 <div class="vertical-line"></div>
-                <li><a href="https://www.instagram.com/ranjith._.bk/"><text>RANJITH </text><student>[ sophomore Dept Comp & Comm ]</student>: CREDITS FOR THE STUDY MATERIALS AND PDF'S.</a></li>
+                <li><a href="https://www.instagram.com/ranjith._.bk/"><text>RANJITH </text><student>[ senior Dept Comp & Comm ]</student>: CREDITS FOR THE STUDY MATERIALS AND PDF'S.</a></li>
                 
             </ul>
             <ul class="icons ">
