--- a/templates/htmlpages/formpage.html
+++ b/templates/htmlpages/formpage.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
@@ -38,7 +39,7 @@
         .container {
             margin: 4em 4em;
             border-radius: 5px;
-            padding: 20px;
+            padding: 20px 15em;
             border-radius: 0.8em;
             background: inherit;
             backdrop-filter: blur(10px);
@@ -47,22 +48,30 @@
         }
 
         .btn:hover {
-            cursor: pointer;
+            cursor:
+
+                pointer;
+        }
+
+        @media only screen and (max-width: 900px) {
+            .container{
+                padding: 20px 10px;
+            }
         }
     </style>
     <title>FEEDBACK PAGE</title>
-    <link rel="icon" href="../statics/Screenshot 2021-12-31 233719-modified.png" type="image/png">
+    <link rel="icon" href="../statics/cce-favicon.png" type="image/png">
 </head>
 
 <body>
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-lg bg-gradient" >
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-lg bg-gradient">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-                <img src="../statics/Screenshot 2021-12-31 233719-modified.png" alt="access logo" width="40" height="40">
+                <img src="../statics/access-logo.png" alt="access logo" height="40">
             </a>
-            
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -78,7 +87,7 @@
 
     <div class="container text-center mx-auto shadow-lg ">
         <h1>ENTER YOUR FEEDBACK</h1>
-        <form action="/submit" method="post" >
+        <form action="/submit" method="post">
             <div class="my-5">
                 <label for="name">Enter Your Name : </label>
                 <input type="text" id="name" required name="name">
@@ -101,7 +110,7 @@
         const btn = document.getElementById('button')
         btn.addEventListener('click', () => {
             let email = document.getElementById('email').value
-            if (/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/.test(email)) {    
+            if (/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/.test(email)) {
                 alert("success")
             }
             else {
